tests/rustdoc-ui/rustc-check-passes.stderr
error[E0636]: the feature `rustdoc_internals` has already been enabled
  --> $DIR/rustc-check-passes.rs:2:12
   |
LL | #![feature(rustdoc_internals)]
   |            ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0636`.
